# paralution_07_rohit

./: .directory  CMakeLists.txt  exclude_rsync.rsync  version
cmake/: FindCUDA.cmake
license/: license.txt
src/: .directory  CMakeLists.txt  Makefile  dpcg.cpp  paralution.hpp
src/base/: CMakeLists.txt  base_matrix.cpp  base_matrix.hpp  base_vector.hpp  global_vector.cpp  global_vector.hpp  local_matrix.cpp  local_matrix.hpp  local_vector.cpp  local_vector.hpp  vector.cpp  vector.hpp
src/base/gpu/: .directory  (+7 more)
src/examples/: .directory  CMakeLists.txt  amg.cpp  as-precond.cpp  assembly.cpp  assembly2.cpp  async.cpp  benchmark.cpp  bicgstab.cpp  block-precond.cpp  cg-amg.cpp  cg.cpp  cmk.cpp  direct.cpp  dpcg.cpp  dpcg_precon.cpp  fixed-point.cpp  gmres.cpp  idr.cpp  jobscriptk20_cpu  jobscriptk20_gpu  jobscriptprof  jscr_cpu_csius  me-preconditioner.cpp  mixed-precision.cpp  nvprof-script  power-method.cpp  simple-spmv.cpp  sp-precond.cpp
src/examples/OpenFOAM/Laplace/: Laplace.C
src/examples/OpenFOAM/Laplace/Make/: files  options
src/examples/fortran/: Makefile  paralution_solver.f90
src/plug-ins/: CMakeLists.txt  paralution_dealii.hpp  paralution_fortran.cpp
src/solvers/: CMakeLists.txt
src/utils/: CMakeLists.txt  math_functions.cpp  math_functions.hpp
visualstudio/paralution_cuda/: paralution_cuda_VS10.sln  paralution_cuda_VS12.sln
visualstudio/paralution_ocl/: paralution_ocl_VS10.sln  paralution_ocl_VS12.sln  paralution_ocl_VS13.sln
visualstudio/paralution_omp/: paralution_omp_VS10.sln  paralution_omp_VS12.sln  paralution_omp_VS13.sln
(+50 files in other folders)
